// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout Tests Layout renders App layout 1`] = `
<div
  className="undefined undefined undefined"
>
  <div>
    <withRouter(Connect(Navigation)) />
  </div>
  <main
    role="main"
  >
    <div>
      App Layout
    </div>
  </main>
  <ScrollToTop />
</div>
`;

exports[`Layout Tests Layout renders Form layout 1`] = `
<div
  className="undefined undefined"
>
  <main
    role="main"
  >
    <div>
      Form Layout
    </div>
  </main>
  <ScrollToTop />
</div>
`;
